# test-task-1

./: .env.template  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: routers.py  validators.py
backend/app/: routers.py
backend/database/: models.py  queries.py
backend/settings/: config.py
database/: core.py  queries.py
migrations/: env.py
migrations/versions/: f9da76e6d0d4_create_tables.py
requirements/: pyproject.toml
settings/: config.py
templates/: get_wallet.html  post_deposit.html
tests/: .env.template  conftest.py  docker-compose.yaml  pytest.ini  test_endpoints.py
