[tool.poetry]
name = "test-task-1"
version = "0.1.0"
description = ""
authors = ["Пользователь <sashasergeevasus345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.5"
sqlalchemy = "2.0.36"
uvicorn = "0.32.0"
pydantic-settings = "2.6.1"
asyncpg = "0.30.0"
pytest = "8.3.3"
httpx = "0.27.2"
pytest-asyncio = "0.24.0"
alembic = "1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
